<resources>
    <string name="app_name">Recovery Toolkit</string>
    <string name="copyright">Copyright @ Granite Mountain BHC</string>
    <string name="navigation">Navigation</string>
    <string name="recoveryTitle">Recovery Tools</string>


    <string name="item_title">Palais Garnier</string>
    <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for
        the Paris Opera.
    </string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="stepper_layout">Withdrawl Scales</string>
    <string name="nav_compassion">Compassion Inventory</string>
    <string name="nav_shame">Shame Scales</string>
    <string name="nav_limits">Drinking Limits</string>
    <string name="nav_worksheets">Worksheets</string>
    <string name="nav_books">eBooks</string>
    <string name="nav_admissions">Admissions</string>
    <string name="nav_prescreen">Pre-screen</string>
    <string name="nav_intake">Intake</string>
    <string name="nav_handbook">Handbook</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_recovery_tools">Recovery Tools</string>
    <string name="nav_user_profile">User Profile</string>
    <string name="user_name">John Doe</string>
    <string name="email">johndoe@gmail.com</string>
    <string name="other">Other</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Withdrawals</item>
        <item>Compassion</item>
        <item>Limits</item>
        <item>Worksheets</item>
        <item>eBooks</item>
        <item>Prescreen</item>
        <item>Intake</item>
        <item>Handbook</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="action_chat">Chat</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->


</resources>
