<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/MyMaterialTheme">
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/navigation_item_1"
        android:title="@string/navigation">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/nav_home"
                android:color="@color/colorIcons"/>
            <item
                android:id="@+id/nav_notifications"
                android:icon="@drawable/ic_notifications_black_24dp"
                android:title="@string/nav_notifications" />
        </menu>
    </item>
    </group>
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/navigation_item_2"
        android:title="@string/recoveryTitle">
    <menu>
    <item
        android:id="@+id/stepperLayout"
        android:icon="@drawable/ic_scale_balance"
        android:title="@string/stepper_layout"
        android:color="@color/colorIcons"/>
    <item
        android:id="@+id/nav_limits"
        android:icon="@drawable/ic_glass_mug"
        android:title="@string/nav_limits"/>
    <item
        android:id="@+id/nav_shame"
        android:icon="@drawable/ic_scale_balance"
        android:title="@string/nav_shame"/>
    <item
        android:id="@+id/nav_compassion"
        android:icon="@drawable/ic_scale_balance"
        android:title="@string/nav_compassion"
        android:color="@color/colorIcons"/>
    <item
        android:id="@+id/nav_worksheets"
        android:icon="@drawable/ic_note_text"
        android:title="@string/nav_worksheets"/>
    <item
        android:id="@+id/nav_books"
        android:icon="@drawable/ic_book"
        android:title="@string/nav_books"/>
</menu>
</item>
    </group>
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_admissions"
        android:title="@string/nav_admissions">
    <menu>
    <item
        android:id="@+id/nav_prescreen"
        android:icon="@drawable/ic_stethoscope"
        android:title="@string/nav_prescreen"/>
    <item
        android:id="@+id/nav_intake"
        android:icon="@drawable/ic_content_paste"
        android:title="@string/nav_intake"/>
    <item
        android:id="@+id/nav_handbook"
        android:icon="@drawable/ic_book_open"
        android:title="@string/nav_handbook"/>
    </menu>
    </item>
    </group>
    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/nav_settings"/>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us"
                android:icon="@drawable/ic_info_outline_black_24dp"/>
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy"
                android:icon="@drawable/ic_lock_outline_black_24dp"
                android:layout_height="24dp"/>
        </menu>
    </item>
</menu>
