<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/nav_drawer_width"
    android:layout_height="190dp"
    android:elevation="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_header">

    <!-- Subtitle : 56dp -->
    <!--  Name: Roboto Medium, 14sp, #FFFFFF -->
    <!--  Email address: Roboto Regular, 14sp, #FFFFFF -->

    <LinearLayout
        android:layout_width="@dimen/nav_drawer_width"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="56dp">


        <ImageView
            android:id="@+id/user_profile"
            android:layout_width="@dimen/nav_drawer_profile_image_size"
            android:layout_height="50dp"
            android:gravity="bottom"
            app:srcCompat="@drawable/ic_account_circle_white_64dp"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="@dimen/nav_drawer_width"
            android:layout_height="wrap_content"
            android:contentDescription="@string/item_desc" />


        <TextView
            android:id="@+id/txvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:fontFamily="roboto-bold"
            android:gravity="bottom"
            android:text="@string/user_name"
            android:textColor="@color/colorPrimaryText"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="roboto"
            android:gravity="bottom"
            android:text="@string/email"
            android:textColor="@color/colorPrimaryText"
            android:textSize="14sp" />

    </LinearLayout>


</RelativeLayout>
